# babeltrace2-ruby-provider

./: LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  ruby-plugin-provider.c
